# OpenCL_sample

./: CMakeLists.txt  Makefile  hello.cl  main.cpp
src/: main.cpp
