CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(hello)
SET(serial "0.0.1")

INCLUDE_DIRECTORIES(
    "${PROJECT_SOURCE_DIR}"
    "$ENV{AMDAPPSDKROOT}/include"
)
LINK_DIRECTORIES(
    "$ENV{AMDAPPSDKROOT}/lib/x86_64"
)

ADD_EXECUTABLE(hello main.cpp)
TARGET_LINK_LIBRARIES(hello OpenCL)

SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2 -msse2")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -msse2")
SET(CMAKE_BUILD_TYPE Release)
