CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(hello)
SET(serial "0.0.2")

INCLUDE_DIRECTORIES(
    "${PROJECT_SOURCE_DIR}"
    "~/SDKs/OpenCL-CLHPP/build/include"
)
LINK_DIRECTORIES(
    "$ENV{AMDAPPSDKROOT}/lib/x86_64"
)

ADD_EXECUTABLE(hello main.cpp)
TARGET_LINK_LIBRARIES(hello "-framework opencl")

SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -std=c++11 -O2 -msse2")
SET(CMAKE_CXX_FLAGS_DEBUG "-Wall -std=c++11 -g -msse2")
SET(CMAKE_BUILD_TYPE Release)
